Ready for publishing?

--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 <body class="hostElt body">
     <div id="main" class="hostElt whiteBox">
         <div id="console" class="expanded" style="text-align: center;">
-            <h2 style="font-size: 18px">CSTK<span style="font-size: .6em">© Ver 1, by Trevor <span class="link" id="CreativeScripts">www.creative-scripts.com</span> last modified 13th Aug 2017</span></h2>
+            <h2 style="font-size: 18px">CSTK<span style="font-size: .6em">© Ver 1, by Trevor <span class="link" id="CreativeScripts">www.creative-scripts.com</span> last modified 16th Aug 2017</span></h2>
             <h2>To execute the whole snippet click on one of the Eval buttons.</h2>
             <h2>
             <form>To execute the selected lines in 
@@ -37,6 +37,7 @@
             <span id="openFolders" name="" value="" class="csButton">Show All Extensions Folders</span>
             <span id="openLogFolder" name="" value="" class="csButton greyButton">Open Log Folder</span>
             <span id="restartExt" class="csButton blueButton">Restart Extension</span>
+            <a href="./readme.html" class="csButton blueButton">?</a>
         </div>
     </div>
     <div id="folders"></div>
